@@ -13,12 +13,15 @@ import org.echoiot.server.dao.util.NoSqlTsDao;
 import org.echoiot.server.dao.util.SqlTsLatestDao;
 import org.echoiot.server.service.install.InstallScripts;
 import org.hibernate.exception.ConstraintViolationException;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Profile;
 import org.springframework.stereotype.Service;
 
 import java.nio.charset.Charset;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -44,16 +47,16 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
     private static final int MAX_KEY_LENGTH = 255;
     private static final int MAX_STR_V_LENGTH = 10000000;
 
-    @Autowired
+    @Resource
     private InsertLatestTsRepository insertLatestTsRepository;
 
-    @Autowired
+    @Resource
     protected CassandraCluster cluster;
 
-    @Autowired
+    @Resource
     protected TsKvDictionaryRepository dictionaryRepository;
 
-    @Autowired
+    @Resource
     private InstallScripts installScripts;
 
     @Value("${spring.datasource.url}")
@@ -73,10 +76,10 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
     public void migrate() throws Exception {
         log.info("Performing migration of latest timeseries data from cassandra to SQL database ...");
         try (Connection conn = DriverManager.getConnection(dbUrl, dbUserName, dbPassword)) {
-            Path schemaUpdateFile = Paths.get(installScripts.getDataDir(), "upgrade", "3.0.1", "schema_ts_latest.sql");
+            @NotNull Path schemaUpdateFile = Paths.get(installScripts.getDataDir(), "upgrade", "3.0.1", "schema_ts_latest.sql");
             loadSql(schemaUpdateFile, conn);
             conn.setAutoCommit(false);
-            for (CassandraToSqlTable table : tables) {
+            for (@NotNull CassandraToSqlTable table : tables) {
                 table.migrateToSql(cluster.getSession(), conn);
             }
         } catch (Exception e) {
@@ -85,31 +88,32 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
         }
     }
 
-    private List<CassandraToSqlTable> tables = Arrays.asList(
-            new CassandraToSqlTable("ts_kv_latest_cf", "ts_kv_latest",
-                    idColumn("entity_id"),
-                    stringColumn("key"),
-                    bigintColumn("ts"),
-                    booleanColumn("bool_v"),
-                    stringColumn("str_v"),
-                    bigintColumn("long_v"),
-                    doubleColumn("dbl_v"),
-                    jsonColumn("json_v")) {
+    private final List<CassandraToSqlTable> tables = List.of(new CassandraToSqlTable("ts_kv_latest_cf",
+                                                                                     "ts_kv_latest",
+                                                                                     idColumn("entity_id"),
+                                                                                     stringColumn("key"),
+                                                                                     bigintColumn("ts"),
+                                                                                     booleanColumn("bool_v"),
+                                                                                     stringColumn("str_v"),
+                                                                                     bigintColumn("long_v"),
+                                                                                     doubleColumn("dbl_v"),
+                                                                                     jsonColumn("json_v")
+    ) {
 
-                @Override
-                protected void batchInsert(List<CassandraToSqlColumnData[]> batchData, Connection conn) {
-                    insertLatestTsRepository
-                            .saveOrUpdate(batchData.stream().map(data -> getTsKvLatestEntity(data)).collect(Collectors.toList()));
-                }
+        @Override
+        protected void batchInsert(@NotNull List<CassandraToSqlColumnData[]> batchData, Connection conn) {
+            insertLatestTsRepository.saveOrUpdate(batchData.stream().map(data -> getTsKvLatestEntity(data)).collect(Collectors.toList()));
+        }
 
-                @Override
-                protected CassandraToSqlColumnData[] validateColumnData(CassandraToSqlColumnData[] data) {
-                    return data;
-                }
-            });
+        @Override
+        protected CassandraToSqlColumnData[] validateColumnData(CassandraToSqlColumnData[] data) {
+            return data;
+        }
+    });
 
-    private TsKvLatestEntity getTsKvLatestEntity(CassandraToSqlColumnData[] data) {
-        TsKvLatestEntity latestEntity = new TsKvLatestEntity();
+    @NotNull
+    private TsKvLatestEntity getTsKvLatestEntity(@NotNull CassandraToSqlColumnData[] data) {
+        @NotNull TsKvLatestEntity latestEntity = new TsKvLatestEntity();
         latestEntity.setEntityId(UUIDConverter.fromString(data[0].getValue()));
         latestEntity.setKey(getOrSaveKeyId(data[1].getValue()));
         latestEntity.setTs(Long.parseLong(data[2].getValue()));
@@ -124,7 +128,7 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
             }
             latestEntity.setStrValue(strV);
         } else {
-            Long longV = null;
+            @Nullable Long longV = null;
             try {
                 longV = Long.parseLong(data[5].getValue());
             } catch (Exception e) {
@@ -132,7 +136,7 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
             if (longV != null) {
                 latestEntity.setLongValue(longV);
             } else {
-                Double doubleV = null;
+                @Nullable Double doubleV = null;
                 try {
                     doubleV = Double.parseDouble(data[6].getValue());
                 } catch (Exception e) {
@@ -145,7 +149,7 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
                     if (StringUtils.isNoneEmpty(jsonV)) {
                         latestEntity.setJsonValue(jsonV);
                     } else {
-                        Boolean boolV = null;
+                        @Nullable Boolean boolV = null;
                         try {
                             boolV = Boolean.parseBoolean(data[3].getValue());
                         } catch (Exception e) {
@@ -162,7 +166,8 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
         return latestEntity;
     }
 
-    protected Integer getOrSaveKeyId(String strKey) {
+    @NotNull
+    protected Integer getOrSaveKeyId(@NotNull String strKey) {
         if (strKey.length() > MAX_KEY_LENGTH) {
             log.warn("[ts_kv_latest] Value size [{}] exceeds maximum size [{}] of column [key] and will be truncated!",
                     strKey.length(), MAX_KEY_LENGTH);
@@ -179,10 +184,10 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
                 try {
                     tsKvDictionaryOptional = dictionaryRepository.findById(new TsKvDictionaryCompositeKey(strKey));
                     if (!tsKvDictionaryOptional.isPresent()) {
-                        TsKvDictionary tsKvDictionary = new TsKvDictionary();
+                        @NotNull TsKvDictionary tsKvDictionary = new TsKvDictionary();
                         tsKvDictionary.setKey(strKey);
                         try {
-                            TsKvDictionary saved = dictionaryRepository.save(tsKvDictionary);
+                            @NotNull TsKvDictionary saved = dictionaryRepository.save(tsKvDictionary);
                             tsKvDictionaryMap.put(saved.getKey(), saved.getKeyId());
                             keyId = saved.getKeyId();
                         } catch (ConstraintViolationException e) {
@@ -205,8 +210,8 @@ public class CassandraTsLatestToSqlMigrateService implements TsLatestMigrateServ
         return keyId;
     }
 
-    private void loadSql(Path sqlFile, Connection conn) throws Exception {
-        String sql = new String(Files.readAllBytes(sqlFile), Charset.forName("UTF-8"));
+    private void loadSql(@NotNull Path sqlFile, @NotNull Connection conn) throws Exception {
+        @NotNull String sql = new String(Files.readAllBytes(sqlFile), StandardCharsets.UTF_8);
         conn.createStatement().execute(sql); //NOSONAR, ignoring because method used to execute echoiot database upgrade script
         Thread.sleep(5000);
     }
