@@ -17,6 +17,7 @@ import org.echoiot.server.service.telemetry.cmd.v2.EntityCountCmd;
 import org.echoiot.server.service.telemetry.cmd.v2.EntityCountUpdate;
 import org.echoiot.server.service.telemetry.cmd.v2.EntityDataUpdate;
 import org.echoiot.server.service.telemetry.sub.SubscriptionErrorCode;
+import org.jetbrains.annotations.NotNull;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -35,7 +36,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @Slf4j
 public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
-    @Autowired
+    @Resource
     private TelemetrySubscriptionService tsService;
 
     Device device;
@@ -62,7 +63,7 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
     @Test
     public void testEntityDataHistoryWsCmd() throws Exception {
-        List<String> keys = List.of("temperature");
+        @NotNull List<String> keys = List.of("temperature");
         long now = System.currentTimeMillis();
 
         EntityDataUpdate update = getWsClient().sendHistoryCmd(keys, now, TimeUnit.HOURS.toMillis(1), dtf);
@@ -74,10 +75,10 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(device.getId(), pageData.getData().get(0).getEntityId());
         Assert.assertEquals(0, pageData.getData().get(0).getTimeseries().get("temperature").length);
 
-        TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
-        TsKvEntry dataPoint2 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(2), new LongDataEntry("temperature", 42L));
-        TsKvEntry dataPoint3 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(3), new LongDataEntry("temperature", 42L));
-        List<TsKvEntry> tsData = Arrays.asList(dataPoint1, dataPoint2, dataPoint3);
+        @NotNull TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
+        @NotNull TsKvEntry dataPoint2 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(2), new LongDataEntry("temperature", 42L));
+        @NotNull TsKvEntry dataPoint3 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(3), new LongDataEntry("temperature", 42L));
+        @NotNull List<TsKvEntry> tsData = Arrays.asList(dataPoint1, dataPoint2, dataPoint3);
 
         sendTelemetry(device, tsData);
 
@@ -107,10 +108,10 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(1, pageData.getData().size());
         Assert.assertEquals(device.getId(), pageData.getData().get(0).getEntityId());
 
-        TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
-        TsKvEntry dataPoint2 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(2), new LongDataEntry("temperature", 43L));
-        TsKvEntry dataPoint3 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(3), new LongDataEntry("temperature", 44L));
-        List<TsKvEntry> tsData = Arrays.asList(dataPoint1, dataPoint2, dataPoint3);
+        @NotNull TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
+        @NotNull TsKvEntry dataPoint2 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(2), new LongDataEntry("temperature", 43L));
+        @NotNull TsKvEntry dataPoint3 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(3), new LongDataEntry("temperature", 44L));
+        @NotNull List<TsKvEntry> tsData = Arrays.asList(dataPoint1, dataPoint2, dataPoint3);
 
         sendTelemetry(device, tsData);
 
@@ -127,9 +128,9 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint3.getTs(), dataPoint3.getValueAsString()), tsArray[2]);
 
         now = System.currentTimeMillis();
-        TsKvEntry dataPoint4 = new BasicTsKvEntry(now, new LongDataEntry("temperature", 45L));
+        @NotNull TsKvEntry dataPoint4 = new BasicTsKvEntry(now, new LongDataEntry("temperature", 45L));
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint4));
+        sendTelemetry(device, List.of(dataPoint4));
         String msg = getWsClient().waitForUpdate();
 
         update = mapper.readValue(msg, EntityDataUpdate.class);
@@ -146,11 +147,11 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
     @Test
     public void testEntityCountWsCmd() throws Exception {
-        AttributeKvEntry dataPoint1 = new BaseAttributeKvEntry(System.currentTimeMillis(), new LongDataEntry("temperature", 42L));
+        @NotNull AttributeKvEntry dataPoint1 = new BaseAttributeKvEntry(System.currentTimeMillis(), new LongDataEntry("temperature", 42L));
         sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, Collections.singletonList(dataPoint1));
 
-        EntityCountQuery edq1 = new EntityCountQuery(dtf, Collections.emptyList());
-        EntityCountCmd cmd1 = new EntityCountCmd(1, edq1);
+        @NotNull EntityCountQuery edq1 = new EntityCountQuery(dtf, Collections.emptyList());
+        @NotNull EntityCountCmd cmd1 = new EntityCountCmd(1, edq1);
 
         getWsClient().send(cmd1);
 
@@ -158,9 +159,9 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(1, update1.getCmdId());
         Assert.assertEquals(1, update1.getCount());
 
-        DeviceTypeFilter dtf2 = new DeviceTypeFilter("non-existing-device-type", "D");
-        EntityCountQuery edq2 = new EntityCountQuery(dtf2, Collections.emptyList());
-        EntityCountCmd cmd2 = new EntityCountCmd(2, edq2);
+        @NotNull DeviceTypeFilter dtf2 = new DeviceTypeFilter("non-existing-device-type", "D");
+        @NotNull EntityCountQuery edq2 = new EntityCountQuery(dtf2, Collections.emptyList());
+        @NotNull EntityCountCmd cmd2 = new EntityCountCmd(2, edq2);
 
         getWsClient().send(cmd2);
 
@@ -169,34 +170,34 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(2, update2.getCmdId());
         Assert.assertEquals(0, update2.getCount());
 
-        KeyFilter highTemperatureFilter = new KeyFilter();
+        @NotNull KeyFilter highTemperatureFilter = new KeyFilter();
         highTemperatureFilter.setKey(new EntityKey(EntityKeyType.ATTRIBUTE, "temperature"));
-        NumericFilterPredicate predicate = new NumericFilterPredicate();
+        @NotNull NumericFilterPredicate predicate = new NumericFilterPredicate();
         predicate.setValue(FilterPredicateValue.fromDouble(40));
         predicate.setOperation(NumericFilterPredicate.NumericOperation.GREATER);
         highTemperatureFilter.setPredicate(predicate);
         highTemperatureFilter.setValueType(EntityKeyValueType.NUMERIC);
 
-        DeviceTypeFilter dtf3 = new DeviceTypeFilter("default", "D");
-        EntityCountQuery edq3 = new EntityCountQuery(dtf3, Collections.singletonList(highTemperatureFilter));
-        EntityCountCmd cmd3 = new EntityCountCmd(3, edq3);
+        @NotNull DeviceTypeFilter dtf3 = new DeviceTypeFilter("default", "D");
+        @NotNull EntityCountQuery edq3 = new EntityCountQuery(dtf3, Collections.singletonList(highTemperatureFilter));
+        @NotNull EntityCountCmd cmd3 = new EntityCountCmd(3, edq3);
         getWsClient().send(cmd3);
 
         EntityCountUpdate update3 = getWsClient().parseCountReply(getWsClient().waitForReply());
         Assert.assertEquals(3, update3.getCmdId());
         Assert.assertEquals(1, update3.getCount());
 
-        KeyFilter highTemperatureFilter2 = new KeyFilter();
+        @NotNull KeyFilter highTemperatureFilter2 = new KeyFilter();
         highTemperatureFilter2.setKey(new EntityKey(EntityKeyType.ATTRIBUTE, "temperature"));
-        NumericFilterPredicate predicate2 = new NumericFilterPredicate();
+        @NotNull NumericFilterPredicate predicate2 = new NumericFilterPredicate();
         predicate2.setValue(FilterPredicateValue.fromDouble(50));
         predicate2.setOperation(NumericFilterPredicate.NumericOperation.GREATER);
         highTemperatureFilter2.setPredicate(predicate2);
         highTemperatureFilter2.setValueType(EntityKeyValueType.NUMERIC);
 
-        DeviceTypeFilter dtf4 = new DeviceTypeFilter("default", "D");
-        EntityCountQuery edq4 = new EntityCountQuery(dtf4, Collections.singletonList(highTemperatureFilter2));
-        EntityCountCmd cmd4 = new EntityCountCmd(4, edq4);
+        @NotNull DeviceTypeFilter dtf4 = new DeviceTypeFilter("default", "D");
+        @NotNull EntityCountQuery edq4 = new EntityCountQuery(dtf4, Collections.singletonList(highTemperatureFilter2));
+        @NotNull EntityCountCmd cmd4 = new EntityCountCmd(4, edq4);
 
         getWsClient().send(cmd4);
 
@@ -207,11 +208,11 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
     @Test
     public void testEntityDataLatestWidgetFlow() throws Exception {
-        List<EntityKey> keys = List.of(new EntityKey(EntityKeyType.TIME_SERIES, "temperature"));
+        @NotNull List<EntityKey> keys = List.of(new EntityKey(EntityKeyType.TIME_SERIES, "temperature"));
         long now = System.currentTimeMillis() - 100;
 
-        EntityDataQuery edq = new EntityDataQuery(dtf, new EntityDataPageLink(1, 0, null, null),
-                Collections.emptyList(), keys, Collections.emptyList());
+        @NotNull EntityDataQuery edq = new EntityDataQuery(dtf, new EntityDataPageLink(1, 0, null, null),
+                                                           Collections.emptyList(), keys, Collections.emptyList());
 
         EntityDataUpdate update = getWsClient().sendEntityDataQuery(edq);
         Assert.assertEquals(1, update.getCmdId());
@@ -223,8 +224,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(0, pageData.getData().get(0).getLatest().get(EntityKeyType.TIME_SERIES).get("temperature").getTs());
         Assert.assertEquals("", pageData.getData().get(0).getLatest().get(EntityKeyType.TIME_SERIES).get("temperature").getValue());
 
-        TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
-        List<TsKvEntry> tsData = Arrays.asList(dataPoint1);
+        @NotNull TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
+        @NotNull List<TsKvEntry> tsData = List.of(dataPoint1);
         sendTelemetry(device, tsData);
 
         update = getWsClient().subscribeLatestUpdate(keys);
@@ -240,10 +241,10 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint1.getTs(), dataPoint1.getValueAsString()), tsValue);
 
         now = System.currentTimeMillis();
-        TsKvEntry dataPoint2 = new BasicTsKvEntry(now, new LongDataEntry("temperature", 52L));
+        @NotNull TsKvEntry dataPoint2 = new BasicTsKvEntry(now, new LongDataEntry("temperature", 52L));
 
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint2));
+        sendTelemetry(device, List.of(dataPoint2));
 
         update = getWsClient().parseDataReply(getWsClient().waitForUpdate());
         Assert.assertEquals(1, update.getCmdId());
@@ -257,13 +258,13 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
         //Sending update from the past, while latest value has new timestamp;
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint1));
+        sendTelemetry(device, List.of(dataPoint1));
         String msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
 
         //Sending duplicate update again
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint2));
+        sendTelemetry(device, List.of(dataPoint2));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
     }
@@ -271,7 +272,7 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
     @Test
     public void testEntityDataLatestTsWsCmd() throws Exception {
         long now = System.currentTimeMillis();
-        List<EntityKey> keys = List.of(new EntityKey(EntityKeyType.TIME_SERIES, "temperature"));
+        @NotNull List<EntityKey> keys = List.of(new EntityKey(EntityKeyType.TIME_SERIES, "temperature"));
 
         EntityDataUpdate update = getWsClient().subscribeLatestUpdate(keys, dtf);
 
@@ -285,8 +286,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals("", pageData.getData().get(0).getLatest().get(EntityKeyType.TIME_SERIES).get("temperature").getValue());
 
         getWsClient().registerWaitForUpdate();
-        TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
-        List<TsKvEntry> tsData = Arrays.asList(dataPoint1);
+        @NotNull TsKvEntry dataPoint1 = new BasicTsKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("temperature", 42L));
+        @NotNull List<TsKvEntry> tsData = List.of(dataPoint1);
         sendTelemetry(device, tsData);
 
         update = getWsClient().parseDataReply(getWsClient().waitForUpdate());
@@ -302,9 +303,9 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint1.getTs(), dataPoint1.getValueAsString()), tsValue);
 
         now = System.currentTimeMillis();
-        TsKvEntry dataPoint2 = new BasicTsKvEntry(now, new LongDataEntry("temperature", 52L));
+        @NotNull TsKvEntry dataPoint2 = new BasicTsKvEntry(now, new LongDataEntry("temperature", 52L));
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint2));
+        sendTelemetry(device, List.of(dataPoint2));
         update = getWsClient().parseDataReply(getWsClient().waitForUpdate());
         Assert.assertEquals(1, update.getCmdId());
         List<EntityData> eData = update.getUpdate();
@@ -317,13 +318,13 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
         //Sending update from the past, while latest value has new timestamp;
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint1));
+        sendTelemetry(device, List.of(dataPoint1));
         String msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
 
         //Sending duplicate update again
         getWsClient().registerWaitForUpdate();
-        sendTelemetry(device, Arrays.asList(dataPoint2));
+        sendTelemetry(device, List.of(dataPoint2));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
     }
@@ -331,7 +332,7 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
     @Test
     public void testEntityDataLatestAttrWsCmd() throws Exception {
         long now = System.currentTimeMillis();
-        List<EntityKey> keys = List.of(new EntityKey(EntityKeyType.SERVER_ATTRIBUTE, "serverAttributeKey"));
+        @NotNull List<EntityKey> keys = List.of(new EntityKey(EntityKeyType.SERVER_ATTRIBUTE, "serverAttributeKey"));
 
         EntityDataUpdate update = getWsClient().subscribeLatestUpdate(keys, dtf);
         Assert.assertEquals(1, update.getCmdId());
@@ -345,8 +346,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
         getWsClient().registerWaitForUpdate();
 
-        AttributeKvEntry dataPoint1 = new BaseAttributeKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("serverAttributeKey", 42L));
-        List<AttributeKvEntry> tsData = Arrays.asList(dataPoint1);
+        @NotNull AttributeKvEntry dataPoint1 = new BaseAttributeKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("serverAttributeKey", 42L));
+        @NotNull List<AttributeKvEntry> tsData = List.of(dataPoint1);
         sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, tsData);
 
         String msg = getWsClient().waitForUpdate();
@@ -363,10 +364,10 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint1.getLastUpdateTs(), dataPoint1.getValueAsString()), tsValue);
 
         now = System.currentTimeMillis();
-        AttributeKvEntry dataPoint2 = new BaseAttributeKvEntry(now, new LongDataEntry("serverAttributeKey", 52L));
+        @NotNull AttributeKvEntry dataPoint2 = new BaseAttributeKvEntry(now, new LongDataEntry("serverAttributeKey", 52L));
 
         getWsClient().registerWaitForUpdate();
-        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, Arrays.asList(dataPoint2));
+        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, List.of(dataPoint2));
         msg = getWsClient().waitForUpdate();
         Assert.assertNotNull(msg);
 
@@ -382,13 +383,13 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
         //Sending update from the past, while latest value has new timestamp;
         getWsClient().registerWaitForUpdate();
-        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, Arrays.asList(dataPoint1));
+        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, List.of(dataPoint1));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
 
         //Sending duplicate update again
         getWsClient().registerWaitForUpdate();
-        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, Arrays.asList(dataPoint2));
+        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, List.of(dataPoint2));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
     }
@@ -396,7 +397,7 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
     @Test
     public void testEntityDataLatestAttrTypesWsCmd() throws Exception {
         long now = System.currentTimeMillis();
-        List<EntityKey> keys = List.of(
+        @NotNull List<EntityKey> keys = List.of(
                 new EntityKey(EntityKeyType.SERVER_ATTRIBUTE, "serverAttributeKey"),
                 new EntityKey(EntityKeyType.CLIENT_ATTRIBUTE, "clientAttributeKey"),
                 new EntityKey(EntityKeyType.SHARED_ATTRIBUTE, "sharedAttributeKey"),
@@ -423,8 +424,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals("", pageData.getData().get(0).getLatest().get(EntityKeyType.ATTRIBUTE).get("anyAttributeKey").getValue());
 
         getWsClient().registerWaitForUpdate();
-        AttributeKvEntry dataPoint1 = new BaseAttributeKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("serverAttributeKey", 42L));
-        List<AttributeKvEntry> tsData = Arrays.asList(dataPoint1);
+        @NotNull AttributeKvEntry dataPoint1 = new BaseAttributeKvEntry(now - TimeUnit.MINUTES.toMillis(1), new LongDataEntry("serverAttributeKey", 42L));
+        @NotNull List<AttributeKvEntry> tsData = List.of(dataPoint1);
 
         sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, tsData);
 
@@ -442,20 +443,20 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
 
         //Sending update from the past, while latest value has new timestamp;
         getWsClient().registerWaitForUpdate();
-        sendAttributes(device, TbAttributeSubscriptionScope.SHARED_SCOPE, Arrays.asList(dataPoint1));
+        sendAttributes(device, TbAttributeSubscriptionScope.SHARED_SCOPE, List.of(dataPoint1));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
 
         //Sending duplicate update again
         getWsClient().registerWaitForUpdate();
-        sendAttributes(device, TbAttributeSubscriptionScope.CLIENT_SCOPE, Arrays.asList(dataPoint1));
+        sendAttributes(device, TbAttributeSubscriptionScope.CLIENT_SCOPE, List.of(dataPoint1));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         Assert.assertNull(msg);
 
         //Sending update from the past, while latest value has new timestamp;
         getWsClient().registerWaitForUpdate();
-        AttributeKvEntry dataPoint2 = new BaseAttributeKvEntry(now, new LongDataEntry("sharedAttributeKey", 42L));
-        sendAttributes(device, TbAttributeSubscriptionScope.SHARED_SCOPE, Arrays.asList(dataPoint2));
+        @NotNull AttributeKvEntry dataPoint2 = new BaseAttributeKvEntry(now, new LongDataEntry("sharedAttributeKey", 42L));
+        sendAttributes(device, TbAttributeSubscriptionScope.SHARED_SCOPE, List.of(dataPoint2));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         update = mapper.readValue(msg, EntityDataUpdate.class);
         Assert.assertEquals(1, update.getCmdId());
@@ -468,8 +469,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint2.getLastUpdateTs(), dataPoint2.getValueAsString()), attrValue);
 
         getWsClient().registerWaitForUpdate();
-        AttributeKvEntry dataPoint3 = new BaseAttributeKvEntry(now, new LongDataEntry("clientAttributeKey", 42L));
-        sendAttributes(device, TbAttributeSubscriptionScope.CLIENT_SCOPE, Arrays.asList(dataPoint3));
+        @NotNull AttributeKvEntry dataPoint3 = new BaseAttributeKvEntry(now, new LongDataEntry("clientAttributeKey", 42L));
+        sendAttributes(device, TbAttributeSubscriptionScope.CLIENT_SCOPE, List.of(dataPoint3));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         update = mapper.readValue(msg, EntityDataUpdate.class);
         Assert.assertEquals(1, update.getCmdId());
@@ -482,8 +483,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint3.getLastUpdateTs(), dataPoint3.getValueAsString()), attrValue);
 
         getWsClient().registerWaitForUpdate();
-        AttributeKvEntry dataPoint4 = new BaseAttributeKvEntry(now, new LongDataEntry("anyAttributeKey", 42L));
-        sendAttributes(device, TbAttributeSubscriptionScope.CLIENT_SCOPE, Arrays.asList(dataPoint4));
+        @NotNull AttributeKvEntry dataPoint4 = new BaseAttributeKvEntry(now, new LongDataEntry("anyAttributeKey", 42L));
+        sendAttributes(device, TbAttributeSubscriptionScope.CLIENT_SCOPE, List.of(dataPoint4));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         update = mapper.readValue(msg, EntityDataUpdate.class);
         Assert.assertEquals(1, update.getCmdId());
@@ -496,8 +497,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         Assert.assertEquals(new TsValue(dataPoint4.getLastUpdateTs(), dataPoint4.getValueAsString()), attrValue);
 
         getWsClient().registerWaitForUpdate();
-        AttributeKvEntry dataPoint5 = new BaseAttributeKvEntry(now, new LongDataEntry("anyAttributeKey", 43L));
-        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, Arrays.asList(dataPoint5));
+        @NotNull AttributeKvEntry dataPoint5 = new BaseAttributeKvEntry(now, new LongDataEntry("anyAttributeKey", 43L));
+        sendAttributes(device, TbAttributeSubscriptionScope.SERVER_SCOPE, List.of(dataPoint5));
         msg = getWsClient().waitForUpdate(TimeUnit.SECONDS.toMillis(1));
         update = mapper.readValue(msg, EntityDataUpdate.class);
         Assert.assertEquals(1, update.getCmdId());
@@ -513,7 +514,7 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
     @Test
     public void testAttributesSubscription_sysAdmin() throws Exception {
         loginSysAdmin();
-        SingleEntityFilter entityFilter = new SingleEntityFilter();
+        @NotNull SingleEntityFilter entityFilter = new SingleEntityFilter();
         entityFilter.setSingleEntity(tenantId);
 
         assertThatNoException().isThrownBy(() -> {
@@ -523,7 +524,7 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         });
 
         getWsClient().registerWaitForUpdate();
-        String expectedAttrValue = "42";
+        @NotNull String expectedAttrValue = "42";
         sendAttributes(TenantId.SYS_TENANT_ID, tenantId, TbAttributeSubscriptionScope.SERVER_SCOPE, List.of(
                 new BaseAttributeKvEntry(System.currentTimeMillis(), new StringDataEntry("attr", expectedAttrValue))
         ));
@@ -532,8 +533,8 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         assertThat(update.get("data").get("attr").get(0).get(1).asText()).isEqualTo(expectedAttrValue);
     }
 
-    private void sendTelemetry(Device device, List<TsKvEntry> tsData) throws InterruptedException {
-        CountDownLatch latch = new CountDownLatch(1);
+    private void sendTelemetry(@NotNull Device device, List<TsKvEntry> tsData) throws InterruptedException {
+        @NotNull CountDownLatch latch = new CountDownLatch(1);
         tsService.saveAndNotify(device.getTenantId(), null, device.getId(), tsData, 0, new FutureCallback<Void>() {
             @Override
             public void onSuccess(@Nullable Void result) {
@@ -548,12 +549,12 @@ public abstract class BaseWebsocketApiTest extends AbstractControllerTest {
         latch.await(3, TimeUnit.SECONDS);
     }
 
-    private void sendAttributes(Device device, TbAttributeSubscriptionScope scope, List<AttributeKvEntry> attrData) throws InterruptedException {
+    private void sendAttributes(@NotNull Device device, @NotNull TbAttributeSubscriptionScope scope, List<AttributeKvEntry> attrData) throws InterruptedException {
         sendAttributes(device.getTenantId(), device.getId(), scope, attrData);
     }
 
-    private void sendAttributes(TenantId tenantId, EntityId entityId, TbAttributeSubscriptionScope scope, List<AttributeKvEntry> attrData) throws InterruptedException {
-        CountDownLatch latch = new CountDownLatch(1);
+    private void sendAttributes(TenantId tenantId, EntityId entityId, @NotNull TbAttributeSubscriptionScope scope, List<AttributeKvEntry> attrData) throws InterruptedException {
+        @NotNull CountDownLatch latch = new CountDownLatch(1);
         tsService.saveAndNotify(tenantId, entityId, scope.name(), attrData, new FutureCallback<Void>() {
             @Override
             public void onSuccess(@Nullable Void result) {
