@@ -11,6 +11,8 @@ import org.echoiot.server.dao.service.DaoSqlTest;
 import org.echoiot.server.transport.mqtt.AbstractMqttIntegrationTest;
 import org.echoiot.server.transport.mqtt.MqttTestClient;
 import org.eclipse.paho.client.mqttv3.MqttSecurityException;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.junit.Before;
 import org.junit.Test;
 
@@ -44,7 +46,7 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
     public void before() throws Exception {
         loginTenantAdmin();
 
-        BasicMqttCredentials credValue = new BasicMqttCredentials();
+        @NotNull BasicMqttCredentials credValue = new BasicMqttCredentials();
         credValue.setClientId(CLIENT_ID);
         clientIdDevice = createDevice("clientIdDevice", credValue);
 
@@ -72,20 +74,20 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
     @Test
     public void testCorrectCredentials() throws Exception {
         // Check that correct devices receive telemetry
-        MqttTestClient mqttTestClient1 = new MqttTestClient();
+        @NotNull MqttTestClient mqttTestClient1 = new MqttTestClient();
         mqttTestClient1.connectAndWait(USER_NAME1);
 
-        MqttTestClient mqttTestClient2 = new MqttTestClient(CLIENT_ID);
+        @NotNull MqttTestClient mqttTestClient2 = new MqttTestClient(CLIENT_ID);
         mqttTestClient2.connectAndWait();
 
-        MqttTestClient mqttTestClient3 = new MqttTestClient(CLIENT_ID);
+        @NotNull MqttTestClient mqttTestClient3 = new MqttTestClient(CLIENT_ID);
         mqttTestClient3.connectAndWait(USER_NAME1);
 
-        MqttTestClient mqttTestClient4 = new MqttTestClient(CLIENT_ID);
+        @NotNull MqttTestClient mqttTestClient4 = new MqttTestClient(CLIENT_ID);
         mqttTestClient4.connectAndWait(USER_NAME2, PASSWORD);
 
         // Also correct. Random clientId and password, but matches access token
-        MqttTestClient mqttTestClient5 = new MqttTestClient(StringUtils.randomAlphanumeric(10));
+        @NotNull MqttTestClient mqttTestClient5 = new MqttTestClient(StringUtils.randomAlphanumeric(10));
         mqttTestClient5.connectAndWait(USER_NAME2, StringUtils.randomAlphanumeric(10));
 
         testTelemetryIsDelivered(accessTokenDevice, mqttTestClient1);
@@ -100,22 +102,22 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
     @Test(expected = MqttSecurityException.class)
     public void testCorrectClientIdAndUserNameButWrongPassword() throws Exception {
         // Not correct. Correct clientId and username, but wrong password
-        MqttTestClient mqttTestClient = new MqttTestClient(CLIENT_ID);
+        @NotNull MqttTestClient mqttTestClient = new MqttTestClient(CLIENT_ID);
         mqttTestClient.connectAndWait(USER_NAME3, "WRONG PASSWORD");
         testTelemetryIsNotDelivered(clientIdAndUserNameAndPasswordDevice3, mqttTestClient);
     }
 
-    private void testTelemetryIsDelivered(Device device, MqttTestClient client) throws Exception {
+    private void testTelemetryIsDelivered(@NotNull Device device, @NotNull MqttTestClient client) throws Exception {
         testTelemetryIsDelivered(device, client, true);
     }
 
-    private void testTelemetryIsNotDelivered(Device device, MqttTestClient client) throws Exception {
+    private void testTelemetryIsNotDelivered(@NotNull Device device, @NotNull MqttTestClient client) throws Exception {
         testTelemetryIsDelivered(device, client, false);
     }
 
-    private void testTelemetryIsDelivered(Device device, MqttTestClient client, boolean ok) throws Exception {
-        String randomKey = StringUtils.randomAlphanumeric(10);
-        List<String> expectedKeys = Arrays.asList(randomKey);
+    private void testTelemetryIsDelivered(@NotNull Device device, @NotNull MqttTestClient client, boolean ok) throws Exception {
+        @NotNull String randomKey = StringUtils.randomAlphanumeric(10);
+        @NotNull List<String> expectedKeys = List.of(randomKey);
         client.publishAndWait(DEVICE_TELEMETRY_TOPIC, JacksonUtil.toString(JacksonUtil.newObjectNode().put(randomKey, true)).getBytes());
 
         String deviceId = device.getId().getId().toString();
@@ -123,7 +125,7 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
         long start = System.currentTimeMillis();
         long end = System.currentTimeMillis() + 5000;
 
-        List<String> actualKeys = null;
+        @Nullable List<String> actualKeys = null;
         while (start <= end) {
             actualKeys = doGetAsyncTyped("/api/plugins/telemetry/DEVICE/" + deviceId + "/keys/timeseries", new TypeReference<>() {
             });
@@ -136,8 +138,8 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
         if (ok) {
             assertNotNull(actualKeys);
 
-            Set<String> actualKeySet = new HashSet<>(actualKeys);
-            Set<String> expectedKeySet = new HashSet<>(expectedKeys);
+            @NotNull Set<String> actualKeySet = new HashSet<>(actualKeys);
+            @NotNull Set<String> expectedKeySet = new HashSet<>(expectedKeys);
 
             assertEquals(expectedKeySet, actualKeySet);
         } else {
@@ -146,6 +148,7 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
         client.disconnect();
     }
 
+    @NotNull
     private Device createDevice(String deviceName, BasicMqttCredentials clientIdCredValue) throws Exception {
         Device device = new Device();
         device.setName(deviceName);
@@ -164,6 +167,7 @@ public class BasicMqttCredentialsTest extends AbstractMqttIntegrationTest {
         return device;
     }
 
+    @NotNull
     private Device createDevice(String deviceName, String accessToken) throws Exception {
         Device device = new Device();
         device.setName(deviceName);
