@@ -1,6 +1,7 @@
 package org.echoiot.common.util;
 
 import lombok.extern.slf4j.Slf4j;
+import org.jetbrains.annotations.NotNull;
 
 import javax.crypto.Mac;
 import javax.crypto.spec.SecretKeySpec;
@@ -23,6 +24,7 @@ public final class AzureIotHubUtil {
     private static final String AZURE_DIR = "azure";
     private static final String FILE_NAME = "BaltimoreCyberTrustRoot.crt.pem";
 
+    @NotNull
     private static final Path FULL_FILE_PATH;
 
     static {
@@ -49,17 +51,17 @@ public final class AzureIotHubUtil {
         return String.format(USERNAME_FORMAT, host, deviceId);
     }
 
-    public static String buildSasToken(String host, String sasKey) {
+    public static String buildSasToken(@NotNull String host, @NotNull String sasKey) {
         try {
-            final String targetUri = URLEncoder.encode(host.toLowerCase(), "UTF-8");
+            final String targetUri = URLEncoder.encode(host.toLowerCase(), StandardCharsets.UTF_8);
             final long expiryTime = buildExpiresOn();
-            String toSign = targetUri + "\n" + expiryTime;
+            @NotNull String toSign = targetUri + "\n" + expiryTime;
             byte[] keyBytes = Base64.getDecoder().decode(sasKey.getBytes(StandardCharsets.UTF_8));
-            SecretKeySpec signingKey = new SecretKeySpec(keyBytes, "HmacSHA256");
-            Mac mac = Mac.getInstance("HmacSHA256");
+            @NotNull SecretKeySpec signingKey = new SecretKeySpec(keyBytes, "HmacSHA256");
+            @NotNull Mac mac = Mac.getInstance("HmacSHA256");
             mac.init(signingKey);
             byte[] rawHmac = mac.doFinal(toSign.getBytes(StandardCharsets.UTF_8));
-            String signature = URLEncoder.encode(Base64.getEncoder().encodeToString(rawHmac), "UTF-8");
+            String signature = URLEncoder.encode(Base64.getEncoder().encodeToString(rawHmac), StandardCharsets.UTF_8);
             return String.format(SAS_TOKEN_FORMAT, targetUri, signature, expiryTime);
         } catch (Exception e) {
             throw new RuntimeException("Failed to build SAS token!!!", e);
@@ -72,11 +74,12 @@ public final class AzureIotHubUtil {
         return expiresOnDate / ONE_SECOND_IN_MILLISECONDS;
     }
 
+    @NotNull
     public static String getDefaultCaCert() {
         try {
             return new String(Files.readAllBytes(FULL_FILE_PATH));
         } catch (IOException e) {
-            log.error("Failed to load Default CaCert file!!! [{}]", FULL_FILE_PATH.toString());
+            log.error("Failed to load Default CaCert file!!! [{}]", FULL_FILE_PATH);
             throw new RuntimeException("Failed to load Default CaCert file!!!");
         }
     }
