@@ -4,6 +4,8 @@ import com.google.common.collect.Lists;
 import org.echoiot.server.common.data.StringUtils;
 import org.echoiot.server.dao.exception.DataValidationException;
 import org.echoiot.server.dao.oauth2.OAuth2Service;
+import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
@@ -31,7 +33,7 @@ import java.util.stream.Collectors;
 public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
     private static final OAuth2Info EMPTY_PARAMS = new OAuth2Info(false, Collections.emptyList());
 
-    @Autowired
+    @Resource
     protected OAuth2Service oAuth2Service;
 
     @Before
@@ -48,7 +50,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test(expected = DataValidationException.class)
     public void testSaveHttpAndMixedDomainsTogether() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                                 .domainInfos(Lists.newArrayList(
                                         OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -61,13 +63,13 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                                 .build()
-        ));
+                                                                                ));
         oAuth2Service.saveOAuth2Info(oAuth2Info);
     }
 
     @Test(expected = DataValidationException.class)
     public void testSaveHttpsAndMixedDomainsTogether() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTPS).build(),
@@ -80,13 +82,13 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                ));
         oAuth2Service.saveOAuth2Info(oAuth2Info);
     }
 
     @Test
     public void testCreateAndFindParams() {
-        OAuth2Info oAuth2Info = createDefaultOAuth2Info();
+        @NotNull OAuth2Info oAuth2Info = createDefaultOAuth2Info();
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
         Assert.assertNotNull(foundOAuth2Info);
@@ -96,7 +98,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testDisableParams() {
-        OAuth2Info oAuth2Info = createDefaultOAuth2Info();
+        @NotNull OAuth2Info oAuth2Info = createDefaultOAuth2Info();
         oAuth2Info.setEnabled(true);
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
@@ -111,7 +113,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testClearDomainParams() {
-        OAuth2Info oAuth2Info = createDefaultOAuth2Info();
+        @NotNull OAuth2Info oAuth2Info = createDefaultOAuth2Info();
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
         Assert.assertNotNull(foundOAuth2Info);
@@ -125,13 +127,13 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testUpdateClientsParams() {
-        OAuth2Info oAuth2Info = createDefaultOAuth2Info();
+        @NotNull OAuth2Info oAuth2Info = createDefaultOAuth2Info();
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
         Assert.assertNotNull(foundOAuth2Info);
         Assert.assertEquals(oAuth2Info, foundOAuth2Info);
 
-        OAuth2Info newOAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info newOAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("another-domain").scheme(SchemeType.HTTPS).build()
@@ -150,7 +152,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                   ));
         oAuth2Service.saveOAuth2Info(newOAuth2Info);
         OAuth2Info foundAfterUpdateOAuth2Info = oAuth2Service.findOAuth2Info();
         Assert.assertNotNull(foundAfterUpdateOAuth2Info);
@@ -159,20 +161,20 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testGetOAuth2Clients() {
-        List<OAuth2RegistrationInfo> firstGroup = Lists.newArrayList(
+        @NotNull List<OAuth2RegistrationInfo> firstGroup = Lists.newArrayList(
                 validRegistrationInfo(),
                 validRegistrationInfo(),
                 validRegistrationInfo(),
                 validRegistrationInfo()
-                                                                    );
-        List<OAuth2RegistrationInfo> secondGroup = Lists.newArrayList(
+                                                                             );
+        @NotNull List<OAuth2RegistrationInfo> secondGroup = Lists.newArrayList(
                 validRegistrationInfo(),
                 validRegistrationInfo()
-        );
-        List<OAuth2RegistrationInfo> thirdGroup = Lists.newArrayList(
+                                                                              );
+        @NotNull List<OAuth2RegistrationInfo> thirdGroup = Lists.newArrayList(
                 validRegistrationInfo()
-        );
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+                                                                             );
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -198,25 +200,25 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                         .mobileInfos(Collections.emptyList())
                         .clientRegistrations(thirdGroup)
                         .build()
-        ));
+                                                                                ));
 
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
         Assert.assertNotNull(foundOAuth2Info);
         Assert.assertEquals(oAuth2Info, foundOAuth2Info);
 
-        List<OAuth2ClientInfo> firstGroupClientInfos = firstGroup.stream()
-                .map(registrationInfo -> new OAuth2ClientInfo(
+        @NotNull List<OAuth2ClientInfo> firstGroupClientInfos = firstGroup.stream()
+                                                                          .map(registrationInfo -> new OAuth2ClientInfo(
                         registrationInfo.getLoginButtonLabel(), registrationInfo.getLoginButtonIcon(), null))
-                .collect(Collectors.toList());
-        List<OAuth2ClientInfo> secondGroupClientInfos = secondGroup.stream()
-                .map(registrationInfo -> new OAuth2ClientInfo(
+                                                                          .collect(Collectors.toList());
+        @NotNull List<OAuth2ClientInfo> secondGroupClientInfos = secondGroup.stream()
+                                                                            .map(registrationInfo -> new OAuth2ClientInfo(
                         registrationInfo.getLoginButtonLabel(), registrationInfo.getLoginButtonIcon(), null))
-                .collect(Collectors.toList());
-        List<OAuth2ClientInfo> thirdGroupClientInfos = thirdGroup.stream()
-                .map(registrationInfo -> new OAuth2ClientInfo(
+                                                                            .collect(Collectors.toList());
+        @NotNull List<OAuth2ClientInfo> thirdGroupClientInfos = thirdGroup.stream()
+                                                                          .map(registrationInfo -> new OAuth2ClientInfo(
                         registrationInfo.getLoginButtonLabel(), registrationInfo.getLoginButtonIcon(), null))
-                .collect(Collectors.toList());
+                                                                          .collect(Collectors.toList());
 
         List<OAuth2ClientInfo> nonExistentDomainClients = oAuth2Service.getOAuth2Clients("http", "non-existent-domain", null, null);
         Assert.assertTrue(nonExistentDomainClients.isEmpty());
@@ -290,13 +292,13 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testGetOAuth2ClientsForHttpAndHttps() {
-        List<OAuth2RegistrationInfo> firstGroup = Lists.newArrayList(
+        @NotNull List<OAuth2RegistrationInfo> firstGroup = Lists.newArrayList(
                 validRegistrationInfo(),
                 validRegistrationInfo(),
                 validRegistrationInfo(),
                 validRegistrationInfo()
-        );
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+                                                                             );
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -306,17 +308,17 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                         .mobileInfos(Collections.emptyList())
                         .clientRegistrations(firstGroup)
                         .build()
-        ));
+                                                                                ));
 
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
         Assert.assertNotNull(foundOAuth2Info);
         Assert.assertEquals(oAuth2Info, foundOAuth2Info);
 
-        List<OAuth2ClientInfo> firstGroupClientInfos = firstGroup.stream()
-                .map(registrationInfo -> new OAuth2ClientInfo(
+        @NotNull List<OAuth2ClientInfo> firstGroupClientInfos = firstGroup.stream()
+                                                                          .map(registrationInfo -> new OAuth2ClientInfo(
                         registrationInfo.getLoginButtonLabel(), registrationInfo.getLoginButtonIcon(), null))
-                .collect(Collectors.toList());
+                                                                          .collect(Collectors.toList());
 
         List<OAuth2ClientInfo> firstDomainHttpClients = oAuth2Service.getOAuth2Clients("http", "first-domain", null, null);
         Assert.assertEquals(firstGroupClientInfos.size(), firstDomainHttpClients.size());
@@ -341,7 +343,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testGetDisabledOAuth2Clients() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -364,7 +366,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                ));
 
         oAuth2Service.saveOAuth2Info(oAuth2Info);
 
@@ -380,7 +382,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindAllRegistrations() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -412,7 +414,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                ));
 
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         List<OAuth2Registration> foundRegistrations = oAuth2Service.findAllRegistrations();
@@ -429,7 +431,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindRegistrationById() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -461,7 +463,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                ));
 
         oAuth2Service.saveOAuth2Info(oAuth2Info);
         List<OAuth2Registration> foundRegistrations = oAuth2Service.findAllRegistrations();
@@ -473,7 +475,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindAppSecret() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -501,7 +503,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                ));
         oAuth2Service.saveOAuth2Info(oAuth2Info);
 
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
@@ -509,8 +511,8 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
         List<OAuth2ClientInfo> firstDomainHttpClients = oAuth2Service.getOAuth2Clients("http", "first-domain", "com.test.pkg1", null);
         Assert.assertEquals(3, firstDomainHttpClients.size());
-        for (OAuth2ClientInfo clientInfo : firstDomainHttpClients) {
-            String[] segments = clientInfo.getUrl().split("/");
+        for (@NotNull OAuth2ClientInfo clientInfo : firstDomainHttpClients) {
+            @NotNull String[] segments = clientInfo.getUrl().split("/");
             String registrationId = segments[segments.length-1];
             String appSecret = oAuth2Service.findAppSecret(UUID.fromString(registrationId), "com.test.pkg1");
             Assert.assertNotNull(appSecret);
@@ -525,7 +527,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
 
     @Test
     public void testFindClientsByPackageAndPlatform() {
-        OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
+        @NotNull OAuth2Info oAuth2Info = new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
                         .domainInfos(Lists.newArrayList(
                                 OAuth2DomainInfo.builder().name("first-domain").scheme(SchemeType.HTTP).build(),
@@ -538,7 +540,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                         ))
                         .clientRegistrations(Lists.newArrayList(
                                 validRegistrationInfo("Google", Arrays.asList(PlatformType.WEB, PlatformType.ANDROID)),
-                                validRegistrationInfo("Facebook", Arrays.asList(PlatformType.IOS)),
+                                validRegistrationInfo("Facebook", List.of(PlatformType.IOS)),
                                 validRegistrationInfo("GitHub", Collections.emptyList())
                         ))
                         .build(),
@@ -553,7 +555,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                                 validRegistrationInfo()
                         ))
                         .build()
-        ));
+                                                                                ));
         oAuth2Service.saveOAuth2Info(oAuth2Info);
 
         OAuth2Info foundOAuth2Info = oAuth2Service.findOAuth2Info();
@@ -573,6 +575,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
         Assert.assertTrue(pkg1IOSClients.stream().anyMatch(client -> client.getName().equals("GitHub")));
     }
 
+    @NotNull
     private OAuth2Info createDefaultOAuth2Info() {
         return new OAuth2Info(true, Lists.newArrayList(
                 OAuth2ParamsInfo.builder()
@@ -607,7 +610,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
         return validRegistrationInfo(null, Collections.emptyList());
     }
 
-    private OAuth2RegistrationInfo validRegistrationInfo(String label, List<PlatformType> platforms) {
+    private OAuth2RegistrationInfo validRegistrationInfo(@Nullable String label, @Nullable List<PlatformType> platforms) {
         return OAuth2RegistrationInfo.builder()
                 .clientId(UUID.randomUUID().toString())
                 .clientSecret(UUID.randomUUID().toString())
@@ -637,7 +640,7 @@ public abstract class BaseOAuth2ServiceTest extends AbstractServiceTest {
                 .build();
     }
 
-    private OAuth2MobileInfo validMobileInfo(String pkgName, String appSecret) {
+    private OAuth2MobileInfo validMobileInfo(String pkgName, @Nullable String appSecret) {
         return OAuth2MobileInfo.builder().pkgName(pkgName)
                 .appSecret(appSecret != null ? appSecret : StringUtils.randomAlphanumeric(24))
                 .build();
