@@ -3,6 +3,7 @@ package org.echoiot.rule.engine.filter;
 import lombok.Data;
 import org.echoiot.rule.engine.api.NodeConfiguration;
 import org.echoiot.server.common.data.EntityType;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.Arrays;
 import java.util.List;
@@ -12,12 +13,11 @@ public class TbOriginatorTypeFilterNodeConfiguration implements NodeConfiguratio
 
     private List<EntityType> originatorTypes;
 
+    @NotNull
     @Override
     public TbOriginatorTypeFilterNodeConfiguration defaultConfiguration() {
-        TbOriginatorTypeFilterNodeConfiguration configuration = new TbOriginatorTypeFilterNodeConfiguration();
-        configuration.setOriginatorTypes(Arrays.asList(
-                EntityType.DEVICE
-        ));
+        @NotNull TbOriginatorTypeFilterNodeConfiguration configuration = new TbOriginatorTypeFilterNodeConfiguration();
+        configuration.setOriginatorTypes(List.of(EntityType.DEVICE));
         return configuration;
     }
 }
